--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css files/style.css">
-  <title>Secret Police</title>
+  <title>JEMA Security Service LTD</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -101,6 +101,20 @@
 
     </div>
   </div>
+  <h2 style="text-align: center; background-color: rgb(197, 193, 193); padding: 1.5rem;">In Collaboration with</h2>
+  <div class="collaborate">
+      <div class="police">
+        <img src="./css files/images/images (1).jpeg" alt=""><br>The Nigerian <br> Police
+      </div>
+
+      <div class="police">
+        <img src="./css files/images/visa_6422278.svg" alt="">
+      </div>
+
+      <div class="police">
+        <img src="./css files/images/the-Nigeria-Security-and-Civil-Defence-Corps-NSCDC-logo.png" alt=""><br>The Nigerian  <br>  Security and  <br>  Civil Deffence  <br> Corps
+      </div>
+  </div><br><br>
 
   <div class="container3">
     <div class="enroll">
@@ -168,11 +182,39 @@
         <img src="./css files/images/IMG-20231223-WA0005.jpg" alt="">
       </div>
 
-      <div class="jema">JEMA <br> security LTD.<br></div>
+      <div class="rc" style="color: chocolate;">RC:7206655</div>
+
+      <div class="jema">JEMA <br> security Service LTD.<br></div>
     </div>
+
+    <div class="company">
+      
+      <h3>Government Approved<img src="./css files/images/checked_190411.png" alt="" style="width: 0.9rem;"></h3>
+      <h4>Securityand Survailance Institute</h4>
+      Headquaters: NO. 12 Onuorah Street, Onuebonyi, Ebonyi State, Nigeria. <br>
+      TEL: 09137658112, 08062286266 <br>
+      Email: jemassltd@gmail.com <br>
+      Company Registration Number: 7206655
+    </div><br><br>
+
+    <h2 style="text-align: center; background-color: rgb(31, 31, 31); padding: 1.5rem; color: white;">In Collaboration with</h2>
+    <div class="collaborate">
+        <div class="police" style="color: black;">
+          <img src="./css files/images/images (1).jpeg" alt=""><br>The Nigerian <br> Police
+        </div>
+  
+        <div class="police">
+          <img src="./css files/images/visa_6422278.svg" alt="">
+        </div>
+  
+        <div class="police" style="color: black;">
+          <img src="./css files/images/the-Nigeria-Security-and-Civil-Defence-Corps-NSCDC-logo.png" alt=""><br>The Nigerian  <br>  Security and  <br>  Civil Deffence  <br> Corps
+        </div>
+    </div><br><br>
+
     copyright@ 2023. All rights reserved. <br>
     Visit and read the companny's<a href="#" style="text-decoration: none; color: chocolate;">Terms and Conditions</a>
-    to avoid service violation and misconduct.
+    to avoid service violation and or misconduct.
   </footer>
 </body>
 
