--- a/index.html
+++ b/index.html
@@ -201,12 +201,11 @@
     <div class="collaborate">
         <div class="police" style="color: black;">
           <img src="./css files/images/images (1).jpeg" alt=""><br>The Nigerian <br> Police
-        </div>
+        </div><br>
   
         <div class="police">
           <img src="./css files/images/visa_6422278.svg" alt="">
-        </div>
-  
+        </div><br>
         <div class="police" style="color: black;">
           <img src="./css files/images/the-Nigeria-Security-and-Civil-Defence-Corps-NSCDC-logo.png" alt=""><br>The Nigerian  <br>  Security and  <br>  Civil Deffence  <br> Corps
         </div>
