--- a/about-us.html
+++ b/about-us.html
@@ -25,8 +25,8 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="login.html">Login</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact-us.html">Contact us</a></li>
       </ul>
     </nav>
 
