--- a/contact-us.html
+++ b/contact-us.html
@@ -34,7 +34,7 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li><hr>
         <li><a href="sign-up.html">Sign up</a></li><hr>
         <li><a href="login.html">Login</a></li><hr>
         <li><a href="about-us.html">About us</a></li><hr>
