--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
         <li><a href="login.html">Login</a></li><hr>
         <li><a href="sign-up.html">Sign up</a></li><hr>
         <li><a href="about-us.html">About us</a></li><hr>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="contact-us.html">Contact us</a></li>
       </ul>
     </nav>
 
@@ -52,7 +52,7 @@
         Our elite team of bodyguards is dedicated to providing unparalleled protection with the utmost professionalism
         and discretion. <br>Our bodyguards and escorts are hand picked specifically for their unique skills, extensive
         training, and proven experience. <br><br>
-        <a href="services.html"><button>Hire</button></a>
+        <a href="contact-us.html"><button onclick="alert('You will be redirected to companies contact page')">Hire</button></a>
       </div><br><br>
 
       <div class="sub-container4-text">
@@ -62,7 +62,7 @@
         Our collection of surveillance cameras spans from high-resolution IP <br>cameras to discreet and specialized
         models, providing real-time monitoring and recording capabilities <br> ensure the safety of your property with
         our intrusion detection systems, featuring motion sensors, door/window alarms, and perimeter protection.<br><br>
-        <a href="services.html"><button>Hire</button></a>
+        <a href="contact-us.html"><button onclick="alert('You will be redirected to companies contact page')">Hire</button></a>
       </div><br><br>
 
       <div class="sub-container4-text">
@@ -71,7 +71,7 @@
 
           We provide highly trained and experienced security personnel to accompany your valuable assets during transport. <br> Whether it's cash, sensitive <br> documents, or high-value items, our team ensures the safe and secure transit from one location to another. <br>
           Our armed security escorts are equipped to handle any potential security threats, providing an additional layer of <br> protection for your assets. With a focus on deterrence and quick response, our personnel are trained to address various security scenarios.<br><br>
-        <a href="services.html"><button>Hire</button></a>
+        <a href="contact-us.html"><button onclick="alert('You will be redirected to companies contact page')">Hire</button></a>
       </div><br><br>
 
       <div class="sub-container4-text">
@@ -80,7 +80,7 @@
 
             Unlock the power of information and insights with JEMA's <br> comprehensive Detective Services. Our team of skilled investigators is committed to providing professional, <br> discreet, and results-driven solutions to meet your investigative needs. <br>
           Whether you're screening potential employees, partners, or individuals, our background investigations provide <br> a detailed and accurate assessment of an individual's history, helping you make informed decisions.<br><br>
-        <a href="services.html"><button>Hire</button></a>
+        <a href="contact-us.html"><button onclick="alert('You will be redirected to companies contact page')">Hire</button></a>
       </div><br><br>
 
       <div class="sub-container4-text">
@@ -96,7 +96,7 @@
 
           <h3>Residential Security:</h3> 
           Safeguard your home with our residential security services. Our experts conduct risk assessments, <br> implement security protocols, and provide round-the-clock monitoring to ensure the safety of your residence. <br><h3>ETC.</h3> <br><br>
-        <a href="services.html"><button>Hire</button></a>
+        <a href="contact-us.html"><button onclick="alert('You will be redirected to companies contact page')">Hire</button></a>
       </div><br><br>
 
       <div class="sub-container4-text">
@@ -104,7 +104,7 @@
         <img src="./css files/images/2104.i105.028.F.m005.c9.isometric public security.jpg" alt=""><br><br>
 
         At JEMA, we recognize the unique security <br> challenges faced by industrial facilities. Our Industrial Security Services are designed to provide comprehensive <br> solutions that safeguard your assets, personnel, and operations with precision and efficiency.<br><br>
-        <a href="services.html"><button>Hire</button></a>
+        <a href="contact-us.html"><button onclick="alert('You will be redirected to companies contact page')">Hire</button></a>
       </div><br><br>
 
       <div class="sub-container4-text">
@@ -112,7 +112,7 @@
         <img src="./css files/images/policeman_5600595.png" alt=""><br><br>
 
         At JEMA, we understand that a disciplined and vigilant security <br> presence is the cornerstone of effective protection. Our Disciplined Guarding Services are tailored <br> to provide not just a physical presence but a commitment to maintaining order, ensuring safety, and upholding the highest standards <br> of professionalism.<br><br>
-        <a href="services.html"><button>Hire</button></a>
+        <a href="contact-us.html"><button onclick="alert('You will be redirected to companies contact page')">Hire</button></a>
       </div><br><br>
 
       <div class="sub-container4-text">
@@ -123,7 +123,7 @@
         extends beyond the initial sale to encompass a range of specialized repair <br> services. Our team of skilled
         technicians is equipped to address issues promptly, ensuring minimal downtime for your security systems.
         <br><br>
-        <a href="services.html"><button>Hire</button></a>
+        <a href="contact-us.html"><button onclick="alert('You will be redirected to companies contact page')">Hire</button></a>
       </div><br><br>
 
       <div class="sub-container4-text">
@@ -134,7 +134,7 @@
         equipment brands and models. <br> We recognize the critical nature of security systems. <br>Our streamlined
         repair processes are designed to deliver timely service, minimizing disruptions to your security
         operations.<br><br>
-        <a href="services.html"><button>Hire</button></a>
+        <a href="contact-us.html"><button onclick="alert('You will be redirected to companies contact page')">Hire</button></a>
       </div>
     </div>
   </div>
