--- a/sign-up.html
+++ b/sign-up.html
@@ -23,9 +23,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact us</a></li>
-        <li><a href="#">Terms</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact-us.html">Contact us</a></li>
+        <li><a href="about-us.html">About Us</a></li>
       </ul>
     </nav>
   </header>
