--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       Do you want to apply for recruitment? Do you have the knowledge and whits its takes? click the button below to get
       started and if you will to report a low priority case, use the button below as well <br><br>
       <div class="buttons"><a href="Enrollment Form.html"><button>Get started</button></a> <a
-          href="#"><button>Report</button></a></div>
+          href="contact-us.html"><button onclick="alert('Please use the comapny phone number or send your report via Email. We will respond in no time!')">Report</button></a></div>
 
     </div>
   </div>
@@ -102,8 +102,8 @@
 
         For inquirie and to report a case or to learn more about our services and to enroll for recruitment, please use
         the button bellow to get started <br><br>
-        <a href="#"><button style="background-color: rgb(234, 234, 234); color: rgb(1, 1, 79); font-weight: bold;">Get
-            started</button></a></a><br><br><a href="#"><button
+        <a href="Enrollment Form.html"><button style="background-color: rgb(234, 234, 234); color: rgb(1, 1, 79); font-weight: bold;">Get
+            started</button></a></a><br><br><a href="contact-us.html"><button onclick="alert('Please use the comapny phone number or send your report via Email. We will respond in no time!')"
             style="background-color: rgb(234, 234, 234); color: rgb(1, 1, 79); font-weight: bold;">Report</button></a></a>
       </div>
 
@@ -132,7 +132,7 @@
       <h2>Recruitment</h2><br><br>
       <div class="text">
         Interested and qualified applicants are to fill an online form and submit within the specified time for
-        submittion. <br><br><a href="#"><button>Fill Form</button></a><br><br>
+        submittion. <br><br><a href="Enrollment Form.html"><button>Fill Form</button></a><br><br>
         Applicants are to only apply once as multiple applications will result to nullification and disqualification of
         ones self. <br><br>other terms will be provided before applicants can fill the form. <br>Go to the <a
           href="#">Terms and Conditions</a> page to view more company policy.
