--- a/Enrollment Form.html
+++ b/Enrollment Form.html
@@ -22,9 +22,9 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="index.html">Home</a></li><hr>
+        <li><a href="#">Services</a></li><hr>
+        <li><a href="#">Contact us</a></li><hr>
         <li><a href="#">Terms</a></li>
       </ul>
     </nav>
