--- a/contact-us.html
+++ b/contact-us.html
@@ -38,7 +38,7 @@
         <li><a href="sign-up.html">Sign up</a></li><hr>
         <li><a href="login.html">Login</a></li><hr>
         <li><a href="about-us.html">About us</a></li><hr>
-        <li><a href="services.html">Services</a></li><hr>
+        <li><a href="services.html">Services</a></li>
       </ul>
     </nav>
 
