--- a/login.html
+++ b/login.html
@@ -22,9 +22,9 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="contact-us.html">Contact us</a></li>
+        <li><a href="index.html">Home</a></li><hr>
+        <li><a href="services.html">Services</a></li><hr>
+        <li><a href="contact-us.html">Contact us</a></li><hr>
         <li><a href="about-us.html">About Us</a></li>
       </ul>
     </nav>
